--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
+    "chart.js": "^4.4.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-qr-code": "^2.0.12",
-    "@supabase/supabase-js": "^2.39.3"
+    "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
