--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "^7.24.0",
     "@supabase/supabase-js": "^2.39.3",
     "chart.js": "^4.4.1",
     "lucide-react": "^0.344.0",
-    "rc-slider": "^10.5.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-qr-code": "^2.0.12"
+    "react-qr-code": "^2.0.12",
+    "rc-slider": "^10.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
     "@babel/plugin-transform-runtime": "^7.24.0",
-    "@babel/runtime": "^7.24.0",
+    "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -30,9 +30,11 @@
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0",
     "vite": "^5.1.4"
   }
 }
