--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "lucide-react": "^0.344.0",
     "rc-slider": "^10.5.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-qr-code": "^2.0.12"
+    "react-qr-code": "^2.0.12",
+    "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
