--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "lucide-react": "^0.344.0",
+    "qrcode.react": "^3.1.0",
     "rc-slider": "^10.5.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
