--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "framer-motion": "^11.0.3",
     "lucide-react": "^0.344.0",
     "qrcode.react": "^3.1.0",
     "rc-slider": "^10.5.0",
