--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.7",
+    "axios-retry": "^4.0.0",
     "chart.js": "^4.4.1",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
